# linux-monitor

./: .gitignore  README.md  debug_monitor_privileged.sh  install_monitor_privileged.sh  monitor_privileged_snapshot.py  monitor_tui.py  package_cleanup_tui.py  pyproject.toml  refresh_monitor_privileged.sh
contrib/systemd/: monitor-privileged-snapshot.timer
docs/: refactor-plan.md
packaging/systemd/: monitor-privileged-snapshot.service  monitor-privileged-snapshot.timer
scripts/: check_oneshot_equivalence.py  check_privileged_schema.py  debug_monitor_privileged.sh  install_monitor_privileged.sh  refresh_monitor_privileged.sh
src/monitor/: __init__.py  _legacy.py
src/monitor/app/: __init__.py  monitor_tui.py  package_cleanup.py  privileged_snapshot.py
src/monitor/cli/: __init__.py  monitor_tui.py  package_cleanup.py  privileged_snapshot.py
src/monitor/collectors/: __init__.py  boot.py  capture.py  containers.py  hygiene.py  logs.py  networking.py  package_monitor.py  resources.py  security.py  storage.py  systemd_health.py
src/monitor/model/: __init__.py  dashboard.py
src/monitor/shared/: __init__.py  command.py  constants.py  formatting.py  parsing_bluetooth.py  parsing_journal.py  parsing_network.py  paths.py  text.py
src/monitor/snapshot/: __init__.py  diff_snapshot.py  privileged.py
src/monitor/tui/: __init__.py  dashboard.py  package_cleanup.py
